--- a/topdeckr/topdeckr/templates/common/common_index.html
+++ b/topdeckr/topdeckr/templates/common/common_index.html
@@ -6,8 +6,11 @@
 		</div>
 	</div>
 </div>
-<div id="card_display_name"></div>
-<input id="card_name" type="text">
-
-<img id="card_image" src="#" >
+<div id="site-container">
+	<input name="card_name" id="card_name" type="text">
+	<div id="right-panel">
+		<div class="card-display">	
+		</div>
+	</div>
+</div>
 {% include 'common/common_footer.html' %}
