--- a/topdeckr/topdeckr/static/css/main.css
+++ b/topdeckr/topdeckr/static/css/main.css
@@ -1,149 +1,5 @@
 /*Main CSS File for TopDeckr*/
 
-@font-face {
-    font-family: 'SourceSansProExtraLight';
-    src: url('../fonts/SourceSansPro-ExtraLight-webfont.eot');
-    src: url('../fonts/SourceSansPro-ExtraLight-webfont.eot?#iefix') format('embedded-opentype'),
-         url('../fonts/SourceSansPro-ExtraLight-webfont.woff') format('woff'),
-         url('../fonts/SourceSansPro-ExtraLight-webfont.ttf') format('truetype'),
-         url('../fonts/SourceSansPro-ExtraLight-webfont.svg#SourceSansProExtraLight') format('svg');
-    font-weight: normal;
-    font-style: normal;
-
-}
-
-@font-face {
-    font-family: 'SourceSansProExtraLightItalic';
-    src: url('../fonts/SourceSansPro-ExtraLightIt-webfont.eot');
-    src: url('../fonts/SourceSansPro-ExtraLightIt-webfont.eot?#iefix') format('embedded-opentype'),
-         url('../fonts/SourceSansPro-ExtraLightIt-webfont.woff') format('woff'),
-         url('../fonts/SourceSansPro-ExtraLightIt-webfont.ttf') format('truetype'),
-         url('../fonts/SourceSansPro-ExtraLightIt-webfont.svg#SourceSansProExtraLightItalic') format('svg');
-    font-weight: normal;
-    font-style: normal;
-
-}
-
-@font-face {
-    font-family: 'SourceSansProLight';
-    src: url('../fonts/SourceSansPro-Light-webfont.eot');
-    src: url('../fonts/SourceSansPro-Light-webfont.eot?#iefix') format('embedded-opentype'),
-         url('../fonts/SourceSansPro-Light-webfont.woff') format('woff'),
-         url('../fonts/SourceSansPro-Light-webfont.ttf') format('truetype'),
-         url('../fonts/SourceSansPro-Light-webfont.svg#SourceSansProLight') format('svg');
-    font-weight: normal;
-    font-style: normal;
-
-}
-
-@font-face {
-    font-family: 'SourceSansProLightItalic';
-    src: url('../fonts/SourceSansPro-LightIt-webfont.eot');
-    src: url('../fonts/SourceSansPro-LightIt-webfont.eot?#iefix') format('embedded-opentype'),
-         url('../fonts/SourceSansPro-LightIt-webfont.woff') format('woff'),
-         url('../fonts/SourceSansPro-LightIt-webfont.ttf') format('truetype'),
-         url('../fonts/SourceSansPro-LightIt-webfont.svg#SourceSansProLightItalic') format('svg');
-    font-weight: normal;
-    font-style: normal;
-
-}
-
-@font-face {
-    font-family: 'SourceSansProRegular';
-    src: url('../fonts/SourceSansPro-Regular-webfont.eot');
-    src: url('../fonts/SourceSansPro-Regular-webfont.eot?#iefix') format('embedded-opentype'),
-         url('../fonts/SourceSansPro-Regular-webfont.woff') format('woff'),
-         url('../fonts/SourceSansPro-Regular-webfont.ttf') format('truetype'),
-         url('../fonts/SourceSansPro-Regular-webfont.svg#SourceSansProRegular') format('svg');
-    font-weight: normal;
-    font-style: normal;
-
-}
-
-@font-face {
-    font-family: 'SourceSansProItalic';
-    src: url('../fonts/SourceSansPro-It-webfont.eot');
-    src: url('../fonts/SourceSansPro-It-webfont.eot?#iefix') format('embedded-opentype'),
-         url('../fonts/SourceSansPro-It-webfont.woff') format('woff'),
-         url('../fonts/SourceSansPro-It-webfont.ttf') format('truetype'),
-         url('../fonts/SourceSansPro-It-webfont.svg#SourceSansProItalic') format('svg');
-    font-weight: normal;
-    font-style: normal;
-
-}
-
-@font-face {
-    font-family: 'SourceSansProSemibold';
-    src: url('../fonts/SourceSansPro-Semibold-webfont.eot');
-    src: url('../fonts/SourceSansPro-Semibold-webfont.eot?#iefix') format('embedded-opentype'),
-         url('../fonts/SourceSansPro-Semibold-webfont.woff') format('woff'),
-         url('../fonts/SourceSansPro-Semibold-webfont.ttf') format('truetype'),
-         url('../fonts/SourceSansPro-Semibold-webfont.svg#SourceSansProSemibold') format('svg');
-    font-weight: normal;
-    font-style: normal;
-
-}
-
-@font-face {
-    font-family: 'SourceSansProSemiboldItalic';
-    src: url('../fonts/SourceSansPro-SemiboldIt-webfont.eot');
-    src: url('../fonts/SourceSansPro-SemiboldIt-webfont.eot?#iefix') format('embedded-opentype'),
-         url('../fonts/SourceSansPro-SemiboldIt-webfont.woff') format('woff'),
-         url('../fonts/SourceSansPro-SemiboldIt-webfont.ttf') format('truetype'),
-         url('../fonts/SourceSansPro-SemiboldIt-webfont.svg#SourceSansProSemiboldItalic') format('svg');
-    font-weight: normal;
-    font-style: normal;
-
-}
-
-@font-face {
-    font-family: 'SourceSansProBold';
-    src: url('../fonts/SourceSansPro-Bold-webfont.eot');
-    src: url('../fonts/SourceSansPro-Bold-webfont.eot?#iefix') format('embedded-opentype'),
-         url('../fonts/SourceSansPro-Bold-webfont.woff') format('woff'),
-         url('../fonts/SourceSansPro-Bold-webfont.ttf') format('truetype'),
-         url('../fonts/SourceSansPro-Bold-webfont.svg#SourceSansProBold') format('svg');
-    font-weight: normal;
-    font-style: normal;
-
-}
-
-@font-face {
-    font-family: 'SourceSansProBoldItalic';
-    src: url('../fonts/SourceSansPro-BoldIt-webfont.eot');
-    src: url('../fonts/SourceSansPro-BoldIt-webfont.eot?#iefix') format('embedded-opentype'),
-         url('../fonts/SourceSansPro-BoldIt-webfont.woff') format('woff'),
-         url('../fonts/SourceSansPro-BoldIt-webfont.ttf') format('truetype'),
-         url('../fonts/SourceSansPro-BoldIt-webfont.svg#SourceSansProBoldItalic') format('svg');
-    font-weight: normal;
-    font-style: normal;
-
-}
-
-@font-face {
-    font-family: 'SourceSansProBlack';
-    src: url('../fonts/SourceSansPro-Black-webfont.eot');
-    src: url('../fonts/SourceSansPro-Black-webfont.eot?#iefix') format('embedded-opentype'),
-         url('../fonts/SourceSansPro-Black-webfont.woff') format('woff'),
-         url('../fonts/SourceSansPro-Black-webfont.ttf') format('truetype'),
-         url('../fonts/SourceSansPro-Black-webfont.svg#SourceSansProBlack') format('svg');
-    font-weight: normal;
-    font-style: normal;
-
-}
-
-@font-face {
-    font-family: 'SourceSansProBlackItalic';
-    src: url('../fonts/SourceSansPro-BlackIt-webfont.eot');
-    src: url('../fonts/SourceSansPro-BlackIt-webfont.eot?#iefix') format('embedded-opentype'),
-         url('../fonts/SourceSansPro-BlackIt-webfont.woff') format('woff'),
-         url('../fonts/SourceSansPro-BlackIt-webfont.ttf') format('truetype'),
-         url('../fonts/SourceSansPro-BlackIt-webfont.svg#SourceSansProBlackItalic') format('svg');
-    font-weight: normal;
-    font-style: normal;
-
-}
-
 
 /*CSS Resets*/
 html, body, div, span, applet, object, iframe,
@@ -172,8 +28,8 @@ footer, header, hgroup, menu, nav, section {
 	display: block;
 }
 body {
+	font-family:"Comic Sans MS", cursive, sans-serif;
 	line-height: 1;
-	min-height:768px;
 }
 ol, ul {
 	list-style: none;
@@ -192,8 +48,13 @@ table {
 }
 h1 { font-size:24px; font-weight:bold; font-family:'Arial',Georgia,Serif;}
 
-.header { width:100%; height:40px; background:#66A3D2; box-shadow: 0 0 5px #888; color:#FFF; }
-.header > .container { padding:5px }
+.header { position:fixed; top:0; width:100%; height:40px; background:#66A3D2; box-shadow: 0 0 5px #888; color:#FFF; }
+.header > .container { padding:5px height:100%; }
 .header > .container > .logo { float:left; height:100%; width:100px; } 
 
-
+#site-container { position:absolute; top:40px; height:100%; } 
+#site-container > #right-panel { position:fixed; top:40px; right:0; width:200px; background:#EEE; box-shadow:0 0 5px #666; overflow:auto; }
+.card-display > .property  { float:left; width:96px; min-height:96px; margin:2px; background:#FFF; box-shadow:0 0 5px #999; overflow:hidden; }
+.card-display > .property > label { font-size:12px; height:15px; padding:5px; width:100%; display:block; color:#FFF; background:#66A3D2; text-transform:capitalize; font-weight:bold; }
+.card-display > .property > span { font-size:11px; }
+.card-display > .property > span.power { width:70px; height: 40px; margin:auto; color:#66A3D2; font-size:36px; } 
