--- a/topdeckr/topdeckr/templates/common/common_index.html
+++ b/topdeckr/topdeckr/templates/common/common_index.html
@@ -7,7 +7,11 @@
 	</div>
 </div>
 <div id="site-container">
-	<input name="card_name" id="card_name" type="text">
+	<form name="card_search" id = "card_search">
+		<div class="control-group">
+			<input name="card_name" id="card_name" type="text" value class="form-control" >
+		</div>
+	</form>
 	<div id="right-panel">
 		<div class="card-display">	
 		</div>
