--- a/topdeckr/topdeckr/static/css/main.css
+++ b/topdeckr/topdeckr/static/css/main.css
@@ -53,11 +53,9 @@ h1 { font-size:24px; font-weight:bold; font-family:'Arial',Georgia,Serif;}
 .header > .container > .logo { float:left; height:100%; width:100px; } 
 
 #site-container { position:absolute; top:40px; height:100%; } 
-#site-container > #right-panel { position:fixed; top:40px; right:0; width:200px; background:#EEE; box-shadow:0 0 5px #666; overflow:auto; }
-.card-display > .property  { width:100%; min-height:15px; margin:2px 0 0 0; background:#FFF; box-shadow:0 0 5px #999; }
-.card-display > .property > label { font-size:12px; height:15px; float:left; width:40%; display:block; color:#FFF; background:#66A3D2; text-transform:capitalize; font-weight:bold; }
-.card-display > .property > div { font-size:11px; }
-.card-display > .property > div.power { color:#66A3D2; }
-.card-display > .property > div.text {  }
-.card-display > .property > label.text { float:none;  width:100%;  }
+
+.right-pullout { position:fixed; top:40px; right:0; height:100%; width:300px; background:#EEE; box-shadow:0 0 5px #666; overflow:auto; }
+
+.card-search, .card-search-input { padding: 5px 5px 0 5px; }
+.card-search > .card-result { width:100%; min-height:15px; padding:10px 0; border-bottom:solid #CCC 1px; }
 
