--- a/topdeckr/topdeckr/templates/common/common_index.html
+++ b/topdeckr/topdeckr/templates/common/common_index.html
@@ -7,14 +7,15 @@
 	</div>
 </div>
 <div id="site-container">
-	<form name="card_search" id = "card_search">
-		<div class="control-group">
-			<input name="card_name" id="card_name" type="text" value class="form-control" >
-		</div>
-	</form>
-	<div id="right-panel">
-		<div class="card-display">	
-		</div>
-	</div>
+    <div class="right-pullout">
+        <form name="card_search" class="card-search-input">
+            <h3>Search Cards</h3>
+            <div class="control-group" style="margin:5px 0 0 0;">
+                <input name="card_name" id="card_name" type="text" value class="form-control" >
+            </div>
+        </form>
+        <div class="card-search">
+        </div>
+    </div>
 </div>
 {% include 'common/common_footer.html' %}
