Vast improvements to the search panel

--- a/topdeckr/topdeckr/templates/common/common_index.html
+++ b/topdeckr/topdeckr/templates/common/common_index.html
@@ -8,10 +8,15 @@
 </div>
 <div id="site-container">
     <div class="right-pullout">
+        <div class="sub-right-pullout">
+            <div class="card-information">
+                Test
+            </div>
+        </div>
         <form name="card_search" class="card-search-input">
             <h3>Search Cards</h3>
             <div class="control-group" style="margin:5px 0 0 0;">
-                <input name="card_name" id="card_name" type="text" value class="form-control" >
+                <input name="card-name" id="card-name" type="text" value class="form-control" >
             </div>
         </form>
         <div class="card-search">
