--- a/topdeckr/topdeckr/templates/common/common_header_includes.html
+++ b/topdeckr/topdeckr/templates/common/common_header_includes.html
@@ -5,28 +5,123 @@
 <script src="{{ STATIC_URL }}js/gatherer_helper.js"></script>
 <script type="text/javascript">
 	$().ready(function() {
-		$("#card_name").keyup(function(){
-			// Set Timeout
-   			clearTimeout($.data(this, 'timer'));
 
-			// Set Search String
-		    	var search_string = $(this).val();
+        function handleCardSearch(event) {
+            var keyupOverrides = [27, 37, 38, 39, 40];
+            if( keyupOverrides.indexOf(event.keyCode) > -1 ){
+                event.preventDefault();
+                return false;
+            }
+            //Open the detail search panel with <enter>
+            if( event.keyCode == 13 ){
+                event.preventDefault();
+                ajaxRequest('get_card', {'id': $('.card-result.selected').attr('card-id')}, handleGetCard);
+                $('.sub-right-pullout').fadeIn(100);
+                $('.sub-right-pullout').addClass('extended');
+                return false;
+            }
+            // Set Timeout
+            clearTimeout($.data(this, 'timer'));
 
-		    	// Do Search
-		    	if (search_string == '') {}
-			else
-				$(this).data('timer', setTimeout(search, 100));
+            // Set Search String
+            var search_string = $(this).val();
+
+            // Do Search
+            if (search_string == '') {}
+            else
+                $(this).data('timer', setTimeout(search, 100));
+        }
+
+		$('body').bind('keydown', function(event){
+            //Open the search panel with <left-arrow>
+            if( event.keyCode == 37 )
+            {
+                $('.right-pullout').fadeIn(100);
+                $('.right-pullout').addClass('extended');
+                $('#card-name').focus();
+                $('#card-name').bind('keyup', handleCardSearch);
+            }
+            //Close the last panel that was opened <esc>
+            if( event.keyCode == 27 )
+            {
+                var panel_to_affect = $('.sub-right-pullout').hasClass('extended') ? '.sub-right-pullout' : '.right-pullout';
+                $(panel_to_affect).fadeOut(100);
+                $(panel_to_affect).removeClass('extended');
+                if(panel_to_affect == ".right-pullout"){
+                    $('#card-name').blur().unbind('keyup', handleCardSearch).val('');
+                    $('.card-result').remove();
+                }
+                if(panel_to_affect == ".sub-right-pullout"){
+                    $('.card-information').empty();
+                }
+            }
+            //Open the detail search panel with <enter>
+            if( event.keyCode == 13 ){
+                event.preventDefault();
+            }
+
+            if(event.keyCode == 40)
+            {
+                event.preventDefault();
+                if(!$('.card-result.selected').length){
+                    $('.card-result').each(function(index, element){
+                        $(element).addClass('selected');
+                        return false;
+                    });
+                }
+                else{
+                    var add_to_next = false;
+                    $('.card-result').each(function(index, element){
+                        if(add_to_next){
+                            $(element).addClass('selected');
+                            return false;
+                        }
+                        if($(element).hasClass('selected'))
+                        {
+                            $(element).removeClass('selected');
+                            add_to_next = true;
+                        }
+                    });
+                }
+            }
+
+            else if(event.keyCode == 38)
+            {
+                event.preventDefault();
+                if(!$('.card-result.selected').length){
+                    $($('.card-result').get().reverse()).each(function(index, element){
+                        $(element).addClass('selected');
+                        return false;
+                    });
+                }
+                else{
+                    var add_to_next = false;
+                    $($('.card-result').get().reverse()).each(function(index, element){
+                        if(add_to_next){
+                            $(element).addClass('selected');
+                            return false;
+                        }
+                        if($(element).hasClass('selected'))
+                        {
+                            $(element).removeClass('selected');
+                            add_to_next = true;
+                        }
+                    });
+                }
+            }
 		});
 	});
+
 	function search()
 	{	
-		var search_value = $('#card_name').val();
+		var search_value = $('#card-name').val();
 		if(search_value !== '')
 		{
 			ajaxRequest('search_cards', {'query': search_value, 'field': 'name', 'limit': 25}, handleCardSearchData);
 		}
 		return false;
 	}
+
 	function ajaxRequest(operation, data, handler){	
 		$.ajax({url: "/request/" + operation + "/",
 			data:data,
@@ -34,19 +129,54 @@
 			cache: false,
 			success: handler});
 	}
+
+    function handleGetCard(result){
+        $('.card-information').html(result.name);
+    }
+
+    function processColor(mana_cost){
+        var color = "";
+        if(mana_cost.indexOf('W') != -1)
+            color = '#FFF';
+        if(mana_cost.indexOf('U') != -1){
+            if(color.length)
+                return '#E0AC10'
+            color = '#00F';
+        }
+        if(mana_cost.indexOf('G') != -1){
+            if(color.length)
+                return '#E0AC10'
+            color = '#1D8700';
+        }
+        if(mana_cost.indexOf('R') != -1){
+            if(color.length)
+                return '#E0AC10'
+            color = '#F00';
+        }
+        if(mana_cost.indexOf('B') != -1){
+            if(color.length)
+                return '#E0AC10'
+            color = '#444';
+        }
+        if(!color.length)
+            color = '#CCC';
+        return color;
+    }
+
 	function handleCardSearchData(result){
         var cards_returned = JSON.parse(result).cards;
         var card_display = $('.card-search');
         $('.card-result').remove();
         for(var card in cards_returned){
-            console.log(cards_returned[card])
-            card_display.append("<div class='card-result'>" +
+            card_display.hide().append("<div class='card-result' card-id=" + cards_returned[card].id +
+                    " style='border-left:solid 2px " + processColor(cards_returned[card].mana_cost) + ";'>" +
                     "<div class='name'>" +
                     cards_returned[card].name +
                     "</div>" +
                     "<div class='type'>" +
                     cards_returned[card].type +
-                    "</div></div>");
+                    "</div>" +
+                    "</div>").fadeIn(100);
         }
 	}
 </script>
