--- a/topdeckr/topdeckr/static/css/main.css
+++ b/topdeckr/topdeckr/static/css/main.css
@@ -28,7 +28,7 @@ footer, header, hgroup, menu, nav, section {
 	display: block;
 }
 body {
-	font-family:"Comic Sans MS", cursive, sans-serif;
+	font-family:"Helvetica Neue", Helvetica, Arial, sans-serif;
 	line-height: 1;
 }
 ol, ul {
@@ -48,20 +48,22 @@ table {
 }
 h1 { font-size:24px; font-weight:bold; font-family:'Arial',Georgia,Serif;}
 
-.header { position:fixed; top:0; width:100%; height:40px; background:#66A3D2; box-shadow: 0 0 5px #888; color:#FFF; }
+.header { position:fixed; top:0; width:100%; height:30px; background:#66A3D2; box-shadow: 0 0 5px #888; color:#FFF; }
 .header > .container { padding:5px; height:100%; }
 .header > .container > .logo { float:left; height:100%; width:100px; } 
 
-#site-container { position:absolute; top:40px; height:100%; }
+#site-container { position:absolute; padding:30px 0 0 0; height:100%; }
 
-.right-pullout { position:fixed; display:none; top:40px; right:-300px; height:100%; width:300px; background:#EEE; box-shadow:-2px 0 5px -1px #888; -webkit-transition: all 0.2s ease-in-out; -moz-transition: all 0.2s ease-in-out; -o-transition: all 0.2s ease-in-out; transition: all 0.2s ease-in-out;}
+.right-pullout { position:fixed; display:none; top:0; margin:30px 0 0 0; right:-300px; height:100%; width:300px; background:#EEE; box-shadow:-2px 0 5px -1px #888; -webkit-transition: all 0.2s ease-in-out; -moz-transition: all 0.2s ease-in-out; -o-transition: all 0.2s ease-in-out; transition: all 0.2s ease-in-out;}
 .right-pullout.extended { right:0; }
 .sub-right-pullout { position:absolute; display:none; right:0px; top:0; height:100%; width:300px; background:#DDD; box-shadow:-2px 0 5px -1px #888; -webkit-transition: all 0.2s ease-in-out; -moz-transition: all 0.2s ease-in-out; -o-transition: all 0.2s ease-in-out; transition: all 0.2s ease-in-out;}
 .sub-right-pullout.extended { right:300px; }
 
 .card-search, .card-search-input { padding: 5px 5px 0 5px; position:relative; background:#EEE; }
-.card-search > .card-result { width:100%; background:#EEE; min-height:15px; padding:10px 0 10px 5px; position:relative; left:-5px; border-bottom:solid #CCC 1px; -webkit-transition: all 0.2s ease-in-out; -moz-transition: all 0.2s ease-in-out; -o-transition: all 0.2s ease-in-out; transition: all 0.2s ease-in-out; }
+.card-search { height:100%; }
+.card-search > .card-result { width:100%; background:#EEE; min-height:15px; padding:10px 0 10px 5px; position:relative; left:-5px; border-bottom:solid #CCC 1px; -webkit-transition: all 0.1s ease-in-out; -moz-transition: all 0.1s ease-in-out; -o-transition: all 0.1s ease-in-out; transition: all 0.1s ease-in-out; }
 .card-search > .selected { box-shadow:-2px 0 4px -1px #689dff; left:-15px; }
 .card-search > .card-result > .type { color:#999; font-size:12px; font-style:italic; }
+.card-search > .card-result > .set-name { color:#999; font-size:12px; font-style:italic; float:right; position:relative; bottom:11px; }
 
 .card-information { padding:5px; height:100%; width:100%; }
